<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">Wabbitemu</string>
    <string name="website">http://wabbit.codeplex.com</string>
    <string name="openSourceSoftware">Open Source Software Used:</string>
    <string name="colorPickerLink"><a href="https://github.com/attenzione/android-ColorPickerPreference">ColorPickerPreference</a>
         <a href="http://www.apache.org/licenses/LICENSE-2.0">License</a></string>
    <string name="bootFreeLink">BootFree <a href="http://www.gnu.org/licenses/gpl-2.0.txt">License</a></string>
    
    <string name="gettingStartedTitle">Getting Started</string>
    <string name="calculatorTypeTitle">Calculator Type</string>
    <string name="osSelectionTitle">OS Selection</string>
    <string name="osDownloadTitle">OS Download</string>
    <string name="osVersionDescription">OS Version: </string>
    <string name="whatIsRomLink">What is a ROM?</string>
    <string name="calculatorTypeDescription">What calculator type would you like to emulate?</string>
    <string name="osSelectionDescription">A calculator OS file is required to emulate TI calculators. 
        How do you want to obtain an OS for Wabbitemu?</string>
    <string name="osTerms"><a href="http://education.ti.com/us/product/apps/84pos.html#show=eula">Terms</a></string>
    <string name="browseRomTitle">ROM Files</string>
    <string name="browseOSTitle">OS Files</string>
    <string name="browseRomDescription">Searching for ROM files&#8230;</string>
    <string name="browseOSDescription">Searching for OS files&#8230;</string>
    <string name="browseFileDescription">Searching for valid files&#8230;</string>
    <string name="aboutRomTitle">What is a ROM?</string>
    <string name="aboutRomDescription">A ROM image contains all the code necessary to emulate the calculator.
        Unfortunately it is illegal to distribute ROM images, so in order to use Wabbitemu, you must create one
        using your calculator. A ROM image is made up of two parts, an OS and the bootcode. OS updates can be 
        downloaded from TI\'s website or extacted from your calculator. The bootcode must be extracted from 
        your calculator. Wabbitemu can combine these two into a ROM file for you. This process is a one time setup. 
        Once you\'ve created a ROM image, you can use it again and again.</string>
    <string name="welcome">Welcome to Wabbitemu. This will help you get started by helping you to create a ROM image.
         A ROM image is required to run Wabbitemu. How do you want to acquire your ROM?</string>
    <string name="haveRomRadio">I already have a ROM file</string>
    <string name="helpCopyRadio">Help me copy a ROM from my calculator</string>
    <string name="helpCreateRadio">Help me create a ROM using open source software</string>
    <string name="browseOsRadio">I already have an OS</string>
    <string name="downloadOsRadio">I\'d like to download one</string>
    <string name="downloadingTitle">Downloading</string>
    <string name="downloadingOsDescription">Downloading OS&#8230;</string>
    <string name="noNetwork">Unable to find active network connection. Please check that you have a connection to the internet.</string>
    <string name="noFilesFound">No files found</string>
    <string name="selectFile">Select a file</string>
    
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>
    
    <string name="ti73">TI-73</string>
    <string name="ti84p">TI-84 Plus</string>
    <string name="ti83p">TI-83 Plus</string>
    <string name="ti85">TI-85</string>
    <string name="ti82">TI-82</string>
    <string name="ti86">TI-86</string>
    <string name="ti84pse">TI-84 Plus SE</string>
    <string name="ti84pcse">TI-84 Plus C SE</string>
    <string name="ti83pse">TI-83 Plus SE</string>
    <string name="ti83">TI-83</string>
    
    <string-array name="menu_array">
        <item>@string/loadFile</item>
	    <item>@string/rerunWizard</item>
	    <item>@string/reset</item>
	    <item>@string/screenshot</item>
	    <item>@string/settings</item>
	    <item>@string/about</item>
    </string-array>
    
    <string name="loadFile">Load file</string>
    <string name="loading">Loading</string>
    <string name="rerunWizard">Re-run setup wizard</string>
    <string name="settings">Settings</string>
    <string name="reset">Reset calculator</string>
    <string name="screenshot">Screenshot</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    
    <string name="sendingRom">Loading ROM</string>
    <string name="sendingFile">Sending file</string>
    <string name="screenshotSuccess">Screenshot saved to %s</string>
    
    <string name="calcSettings">Calc</string>
    <string name="skinSettings">Skin</string>
    <string name="screenSettings">Screen</string>
    
    <string name="useVibration">Vibrate on keypress</string>
    <string name="useVibrationSummary">Vibrate when a key is pressed on the skin</string>
    <string name="alwaysAwake">Always awake</string>
    <string name="alwaysAwakeSummary">Keep the screen on while the calculator is running</string>
    <string name="autoTurnOn">Automatically turn the calc on</string>
    <string name="autoTurnOnSummary">If the calculator is launched and not turned on, Wabbitemu will attempt to automatically turn it on</string>
    <string name="faceplateColor">Faceplate Color</string>
    <string name="faceplateColorSummary">Color of the TI-84PSE faceplate</string>
    <string name="correctScreenRatio">Fix screen aspect ratio</string>
    <string name="correctScreenRatioSummary">On smaller devices, make sure the screen is the correct 
        proportions compared to the real screen</string>
    <string name="largeScreen">Largest screen size</string>
    <string name="largeScreenSummary">On smaller devices, make the screen as large as possible on the skin</string>
    <string name="maximizeSkin">Largest skin size</string>
    <string name="maximizeSkinSummary">On smaller devices, cut of as much extra padding as possible</string>
    <string name="useImmersiveMode">Enable \'Immserive Mode\'</string>
    <string name="useImmersiveModeSummary">On the calc window, hide the status and soft key bars to take up the entire screen. Swipe from the top or bottom edges to gain access to the bars.</string>
    
    <string name="errorTitle">Error</string>
    <string name="errorWebPageDownloadError">Unable to download OS download web page</string>
    <string name="errorOsDownloadDescription">Error downloading the OS</string>
    <string name="errorLoadingNativeLib">Unable to load native library component. If this issue persists, please try reinstalling Wabbitemu.</string>
    <string name="errorRomCreateDescription">Error creating the ROM</string>
    <string name="errorRomImage">Error loading ROM image</string>
    <string name="errorLink">There was an error sending the file to the calculator</string>
    <string name="errorScreenshot">Error taking screenshot.</string>
    <string name="errorMissingSdCard">No external storage was detected. Please add a storage device to save a screenshot.</string>
    <string name="error_failed_load_native_lib">Failed to load the native library. This is a fatal error.</string>
</resources>
