<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
            android:key="useVibration"
            android:title="@string/useVibration"
            android:summary="@string/useVibrationSummary"
            android:defaultValue="true" />
    <CheckBoxPreference
            android:key="alwaysAwake"
            android:title="@string/alwaysAwake"
            android:summary="@string/alwaysAwakeSummary"
            android:defaultValue="false" />
    <CheckBoxPreference
            android:key="autoTurnOn"
            android:title="@string/autoTurnOn"
            android:summary="@string/autoTurnOnSummary"
            android:defaultValue="true" />
    <net.margaritov.preference.colorpicker.ColorPickerPreference
		    android:key="faceplateColor"
		    android:title="@string/faceplateColor"
		    android:summary="@string/faceplateColorSummary"
		    android:defaultValue="0xff000000" />
</PreferenceScreen>