<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:text="@string/calculatorTypeDescription"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/setupModelRadioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="20dp"
        android:checkedButton="@+id/ti83pRadio"
        android:orientation="vertical"
        android:padding="10dp" >

        <RadioButton
            android:id="@+id/ti73Radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ti73" />

        <RadioButton
            android:id="@+id/ti83pRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ti83p" />

        <RadioButton
            android:id="@+id/ti83pseRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ti83pse" />

        <RadioButton
            android:id="@+id/ti84pRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ti84p" />

        <RadioButton
            android:id="@+id/ti84pseRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ti84pse" />

        <RadioButton
            android:id="@+id/ti84pcseRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ti84pcse" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/adContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/step2Layout" >

        <include layout="@layout/ad" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/step2Layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip"
            android:background="?android:attr/dividerVertical" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/divider"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/back" />

        <View
            android:id="@+id/divider"
            android:layout_width="1dip"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="4dip"
            android:layout_marginTop="4dip"
            android:background="?android:attr/dividerVertical" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/divider"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/next" />
    </RelativeLayout>

</merge>