<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/aboutIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/hdicon" />

    <TextView
        android:id="@+id/aboutAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutIcon"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/app_name"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/aboutVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutAppName"
        android:layout_centerHorizontal="true"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/websiteLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutVersion"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:autoLink="web"
        android:text="@string/website"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/aboutOpenSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/websiteLink"
        android:layout_margin="5dp"
        android:text="@string/openSourceSoftware"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/colorPickerLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutOpenSource"
        android:layout_margin="5dp"
        android:text="@string/colorPickerLink"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/bootFreeLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/colorPickerLink"
        android:layout_margin="5dp"
        android:text="@string/bootFreeLink"
        android:textSize="16sp" />

</RelativeLayout>