<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:text="@string/welcome"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/setupOptionsRadioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/textView1"
        android:layout_marginTop="20dp"
        android:checkedButton="@+id/browseRomRadio"
        android:orientation="vertical"
        android:padding="10dp" >

        <RadioButton
            android:id="@+id/browseRomRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/haveRomRadio" />

        <!-- TODO: make this work -->

        <RadioButton
            android:id="@+id/copyWizardRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/helpCopyRadio"
            android:visibility="gone" />

        <RadioButton
            android:id="@+id/createWizardRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/helpCreateRadio" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/adContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/step1Layout" >

        <include layout="@layout/ad" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/step1Layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip"
            android:background="?android:attr/dividerVertical" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/next" />
    </RelativeLayout>

</merge>