<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:text="@string/osSelectionDescription"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/setupOsAcquisistion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="20dp"
        android:checkedButton="@+id/downloadOsRadio"
        android:orientation="vertical"
        android:padding="10dp" >

        <RadioButton
            android:id="@+id/browseOsRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/browseOsRadio" />

        <RadioButton
            android:id="@+id/downloadOsRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/downloadOsRadio" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setupOsAcquisistion"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/osVersionDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:text="@string/osVersionDescription"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/osVersionSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/osTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:text="@string/osTerms"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/adContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/step3Layout" >

        <include layout="@layout/ad" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/step3Layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip"
            android:background="?android:attr/dividerVertical" />

        <View
            android:id="@+id/divider"
            android:layout_width="1dip"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="4dip"
            android:layout_marginTop="4dip"
            android:background="?android:attr/dividerVertical" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/divider"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/back" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/divider"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/finish" />
    </RelativeLayout>

</merge>